Changes:
- Move to Java 10